test/neg/neg-serial8.errc
Arguments to UPCXX_SERIALIZED_FIELDS cannot be const -- use UPCXX_SERIALIZED_VALUES instead.
